# TinyAPL

./: tinyapl.cabal
app/TinyAPL/: CLI.hs
app/keymaps/: us-intl.keymap
