cabal-version:      3.0
name:               tinyapl
version:            0.12.0.0
synopsis:           TinyAPL is a tiny APL dialect

-- A longer description of the package.
-- description:
homepage:           https://tinyapl.rubenverg.com

-- A URL where users can report bugs.
bug-reports:        https://github.com/rubenverg/tinyapl/issues
license:            MIT
license-file:       LICENSE
author:             Madeline Vergani
maintainer:         me@rubenverg.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
                  , std/**/*.tinyapl

common warnings
    ghc-options: -W -fprint-potential-instances

library
    import:           warnings
    exposed-modules:  TinyAPL.Glyphs
                    , TinyAPL.Adverb
                    , TinyAPL.Conjunction
                    , TinyAPL.Context
                    , TinyAPL.CoreExtraArgs
                    , TinyAPL.CoreQuads
                    , TinyAPL.CoreQuads.Inspect
                    , TinyAPL.CoreQuads.Math
                    , TinyAPL.CoreQuads.Regex
                    , TinyAPL.CoreQuads.Unicode
                    , TinyAPL.Complex
                    , TinyAPL.Error
                    , TinyAPL.Function
                    , TinyAPL.Functions
                    , TinyAPL.Highlighter
                    , TinyAPL.Interpreter
                    , TinyAPL.Noun
                    , TinyAPL.Parser
                    , TinyAPL.Primitives
                    , TinyAPL.Quads
                    , TinyAPL.Random
                    , TinyAPL.StandardLibrary
                    , TinyAPL.Tolerant
                    , TinyAPL.Util
                    , TinyAPL.Value
                    , TinyAPL.Gamma.Factorial
                    , TinyAPL.Gamma.Gamma
                    , TinyAPL.Gamma.Gamma.Incomplete
                    , TinyAPL.Gamma.Gamma.Lanczos
                    , TinyAPL.Gamma.Gamma.Stirling
    other-modules:    TinyAPL.StandardLibrary.Internal

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , megaparsec ^>=9.6.1
                    , mtl ^>=2.3.1
                    , random ^>=1.2.1.2
                    , time >=1.12
                    , matrix ^>=0.3.6.3
                    , continued-fractions ^>=0.10.0.2
                    , converge ^>=0.1.0.1
                    , vector ^>=0.13.1.0
                    , parsers ^>=0.12.11
                    , split ^>=0.2.5
                    , filepath ^>=1.5.2.0
                    , directory ^>=1.3.8.3
                    , deepseq ^>=1.5.0.0
                    , cereal ^>=0.5.8.3
                    , bytestring ^>=0.12.1.0
                    , text ^>=2.1.1
                    , exceptions ^>=0.10.7
                    , regex-base ^>=0.94.0.2
                    , regex-pcre-builtin ^>=0.95.2.3.8.44
                    , array ^>=0.5.7.0
                    , containers ^>=0.7
                    , arithmoi ^>=0.13.0.1
                    , template-haskell ^>=2.22.0.0
    hs-source-dirs:   src
                    , gamma
    default-language: Haskell2010

executable tinyapl
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    TinyAPL.CLI
                    , TinyAPL.Files
                    , TinyAPL.Quads.FFI
                    , TinyAPL.Quads.File

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , deepseq
                    , exceptions
                    , mtl
                    , directory
                    , split ^>=0.2.5
                    , tinyapl
    if os(linux) || os(darwin)
        build-depends:edited
    if !os(wasi)
        build-depends:libffi ^>=0.2.1
    if os(linux) || os(darwin)
        build-depends:unix ^>=2.8.5.1
    if os(windows)
        build-depends:Win32 ^>=2.14.0.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable tinyapl-js
    import:           warnings
    main-is:          Main.hs

    other-modules:    JSBridge

    build-depends:    base ^>=4.20.0.0
                    , ghc-experimental ==0.1.0.0 || ^>=9.1001.0
                    , deepseq
                    , tinyapl
    
    hs-source-dirs:   js/src
    default-language: Haskell2010
    
    if os(wasi)
        ghc-options:  -W -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    else
        build-depends:ghc-wasm-compat
        ghc-options:  -W -fplugin GHC.Wasm.FFI.Plugin

test-suite tinyapl-tests
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    TinyAPL.ArraySpec
                    , TinyAPL.ParserSpec
                    , TinyAPL.PrimitivesSpec
    build-depends:    base ^>=4.20.0.0
                    , hspec ^>=2.11.7
                    , hspec-discover ^>=2.11.7
                    , tinyapl
    build-tool-depends:
        hspec-discover:hspec-discover >= 2.11.7
